--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "milon/barcode": "^8.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
