--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "consoletvs/charts": "7.*",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
+        "elasticsearch/elasticsearch": "^8.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
