--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "consoletvs/charts": "7.*",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
+        "doctrine/dbal": "^3.4",
         "elasticsearch/elasticsearch": "^8.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.6",
-        "laravel/framework": "8.40",
+        "laravel/framework": "8.83.8",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
