--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "printnode/printnode-php": "master",
         "rawilk/laravel-printing": "^2.0",
         "silviolleite/laravelpwa": "^2.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
