--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^8.0",
         "printnode/printnode-php": "master",
+        "pusher/pusher-php-server": "5.0",
         "rawilk/laravel-printing": "^2.0",
         "silviolleite/laravelpwa": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
