--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "laravel-echo": "^1.14.0",
         "moment": "^2.29.1"
     }
 }
