cambios de deligth configuracion de administrador deligth imagenes

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         },
         "files": [
             "app/Helpers/CreateList.php",
-            "app/Helpers/CustomPrint.php"
+            "app/Helpers/CustomPrint.php",
+            "app/Helpers/GlobalHelper.php"
         ]
     },
     "autoload-dev": {
