mejoras carpetas ignoradas en gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ yarn-error.log
 /public/imagenes/perfil/
 /public/imagenes/productos/
 /public/imagenes/subcategorias/
+/public/imagenes/almuerzo/
+/public/imagenes/galeria/
