--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/carrito/index.js": "/js/carrito/index.js",
+    "/js/carrito-service/carrito-service.js": "/js/carrito-service/carrito-service.js",
     "/css/app.css": "/css/app.css"
 }
