--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.14.0",
+        "lucide": "^0.540.0",
         "moment": "^2.29.1"
     }
 }
