--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
@@ -22,8 +21,11 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "axios": "^1.12.2",
+        "axios-cache-interceptor": "^1.8.3",
         "laravel-echo": "^1.14.0",
         "lucide": "^0.540.0",
-        "moment": "^2.29.1"
+        "moment": "^2.29.1",
+        "process": "^0.11.10"
     }
 }
