--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0",
@@ -28,7 +31,7 @@
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^8.0",
         "printnode/printnode-php": "master",
-        "pusher/pusher-php-server": "5.0",
+        "pusher/pusher-php-server": "4.1.5",
         "rawilk/laravel-printing": "^2.0",
         "silviolleite/laravelpwa": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
