--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,15 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0",
         "asantibanez/livewire-charts": "*",
+        "aws/aws-sdk-php": "^3.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "beyondcode/laravel-websockets": "^1.14",
         "consoletvs/charts": "6.*",
@@ -22,11 +26,12 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^8.0",
         "printnode/printnode-php": "master",
-        "pusher/pusher-php-server": "5.0",
+        "pusher/pusher-php-server": "4.1.5",
         "rawilk/laravel-printing": "^2.0",
         "silviolleite/laravelpwa": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
