--- a/public/_manifest.json
+++ b/public/_manifest.json
@@ -11,7 +11,8 @@
     "background_color": "#000000",
     "theme_color": "#000000",
     "generated": "true",
-    "icons": [{
+    "icons": [
+        {
             "src": "app/icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png",
